Refactor wiki actions and switch to MariaDB driver
Replaces the MySQL JDBC driver with the MariaDB driver in pom.xml and updates the Flyway JDBC URL accordingly. Refactors WikiDAO and related actions to use Optional for null safety, and updates all admin wiki actions to use the new ApiResponse constructor directly instead of static helpers. Removes MySQL-specific cleanup code from AppContextListener. Adds or adjusts @MultipartConfig annotations for file upload servlets. Improves CSRF token validation placement in admin servlets. Cleans up and clarifies code in WikiService, ApiResponse, and related admin actions for better maintainability and error handling.